=======
CHANGES
=======

3.5.7 (unreleased)
------------------

- ...

3.5.6 (2008-08-06)
------------------

- no changes. Retag for correct release on PyPI

3.5.5 (2008-07-27)
------------------

- Made C code compatible with Python 2.5 on 64bit architectures.

3.5.4 (2008-07-16)
---------------------

- fixed #238579 / #163149: error with unicode traversing
- fixed #221025 : adding menu is sorted with translated item
                  by using a collator (better localized sorting)
- fixed #227617 :
    - prevent the namechooser from failing on '+', '@' and '/'
    - added tests in the namechooser
    - be sure the name chooser returns unicode
- fixed #175388 : the setitem's size modification is now done in setitemf:
  setting an existing item does not change the size,
  and the event subscribers should see the new size instead of the old size.
  Reimplemented the BTreeContainer so that it directly accesses the btree
  methods (removed an old #TODO)

3.5.3 (2007-11-09)
------------------

- Send ``IObjectModifiedEvent`` when changing the title through the
  ``@@contents.html`` view.

  This fixes https://bugs.edge.launchpad.net/zope3/+bug/98483.

3.5.2 (2007-11-01)
------------------

- Reactivated functional tests.

3.5.1 (2007-10-31)
------------------

- Resolve ``ZopeSecurityPolicy`` and ``IRolePermissionManager`` deprecation
  warning.

3.5.0 (2007-10-11)
------------------

- Updated package meta-data.

3.5.0a1 (2007-06-29)
--------------------

* Updated bootstrap script to current version.

* Store length of ``BTreeContainer`` in its own ``Length`` object for faster
  ``__len__`` implementation of huge containers.


3.4.0a1 (2007-04-22)
--------------------

- Initial release as a separate project, corresponds to ``zope.app.container``
  from Zope 3.4.0a1.