@@ -5,7 +5,9 @@ CHANGES
 3.5.7 (unreleased)
 ------------------
 
-- ...
+- never fail if the suggested name is in a wrong type (#227617)
+
+- checkName first checks the parameter type before the emptiness
 
 3.5.6 (2008-08-06)
 ------------------
